fix bug: horizontal scrolling

--- a/stylesheets/theme.less
+++ b/stylesheets/theme.less
@@ -12,7 +12,6 @@
 @import "ui/_popups";
 @import "uibase/_siteSelect";
 
-
 body {
     background: @theme-color-background-base;
     font-family: @theme-fontFamily-base;
@@ -101,6 +100,10 @@ table.entityTable tr td a:hover {
             color: @theme-color-text-lighter;
             .font-default(13px, 15px);
         }
+		
+		&.sites_selector_in_dashboard {
+			margin: -15px 40px 0 0;
+		}
     }
 
     .Menu--dashboard {
